deploy/yamls-parameterized/kustomize/base/wf--58c1aa12-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: wf--58c1aa12
    name: wf--58c1aa12
spec:
    rules:
        - host: localhost
          http:
            paths:
                - backend:
                    service:
                        name: spring-petclinic
                        port:
                            name: port-8080
                  path: /spring-petclinic
                  pathType: Prefix
status:
    loadBalancer: {}

...
